<resources>
    <string name="app_name">Filmes Famosos</string>

    <string name="activity_mixed_trans_banner">activity_mixed_trans_banner</string>
    <string name="activity_mixed_trans_evaluation">activity_mixed_trans_evaluation</string>
    <string name="activity_mixed_trans_adult">activity_mixed_trans_adult</string>

    <string name="no_internet_message">Ops. Parece que você está sem internet, verifique sua conexão e tente novamente! Ou acesso os seus favoritos pelo menu!</string>
    <string name="error_message">Ops. Estamos passando por dificuldades técnicas, por favor tente novamente mais tarde!</string>
    <string name="error_favorites_message">Ops. Você ainda não tem nenhum favorito, adicione alguns filmes aos seus favoritos clicando na estrela e eles apareçerão aqui!</string>
    <string name="review_empty_message">Ops. Não temos nenhuma review para este filme.</string>
    <string name="video_empty_message">Ops. Não temos nenhum video para este filme.</string>

    <string name="menu_popularity">Mais populares</string>
    <string name="menu_avaliation">Melhor avaliados</string>
    <string name="menu_favorites">Favoritos</string>

    <string name="status_image_content_description">Imagem para ilustrar o status da operção.</string>
    <string name="movie_backdrop_content_description">Imagem de fundo do filme.</string>
    <string name="movie_banner_content_description">Cartaz do filme.</string>
    <string name="circle_background_content_description">Fundo em circulo.</string>
    <string name="adults_only_content_description">Imagen indicativa que o filme é para maiores de 18 anos.</string>
    <string name="app_logo_content_description">Logotipo do app, gif de uma camera de cinema.</string>
    <string name="star_favorite_description">Botão de favorito em formato de estrela.</string>
    <string name="youtube_description">Botão de acesso à tela de trailers do filme.</string>
    <string name="review_description">Botão de acesso à tela de reviews do filme.</string>
    <string name="thumbnail_description">Thumbnail do trailer do filme.</string>
    <string name="play_button_description">Botão de play.</string>

    <string name="NR">NR</string>

    <string name="youtube_url">https://www.youtube.com/watch?v=%1$s</string>

</resources>
